fix(vista): hide button with z-index

--- a/src/app/principal/vista/vista.component.css
+++ b/src/app/principal/vista/vista.component.css
@@ -15,3 +15,6 @@
   .demo-row-is-clicked {
     font-weight: bold;
   }
+.esconder{
+  z-index: 0;
+}
